# gremlin_bot

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  RELEASE_NOTES.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/commands/: release.md
.claude/skills/: release.md
.github/workflows/: deploy.yml  quality.yml
app/: main.py
app/admin/: __init__.py  router.py
app/bot/: __init__.py  constants.py  middlewares.py  router_admin.py  router_fun.py  router_games.py  router_games_extra.py  router_interjector.py  router_spy.py  router_triggers.py  typing_indicator.py  voice_reply.py
app/infra/: db.py  redis.py  scheduler.py
app/models/: __init__.py  akinator_round.py  app_setting.py  chat.py  dice_round.py  guess_round.py  memory.py  message.py  monthly_champion.py  persona.py  quote_week_round.py  rapbattle_round.py  roast.py  roulette.py  ship.py  spy.py  spy_round.py  storychain_round.py  user.py  wordchain_round.py
app/services/: app_config.py  context.py  dice_game.py  guess_game.py  interjector.py  message_history.py  moderation.py  monthly_champion.py  network_monitor.py  persona.py  quick_games.py  quotebook.py  reactions.py  release_broadcast.py  reply_images.py  reply_voice.py  roast.py  roulette.py  settings.py  ship.py  spontaneity.py  usage_limits.py  user_memory.py
app/utils/: llm.py  locks.py  logging.py  proxy.py  text.py  version.py
docs/: user_memory_design_options.md  user_memory_pilot.md
migrations/: README.md  env.py
migrations/versions/: 20250927_01_initial.py  20251001_01_style_personas.py  20251002_01_global_settings.py  20251002_02_roulette.py  2025100601_roulette_participants.py  20260315_01_user_memory.py  20260322_01_roulette_idempotency.py  20260413_01_messages_photo_refs.py  20260416_01_persona_ux.py  20260417_01_chat_memory.py  20260509_01_guess_who_said_it.py  20260510_01_monthly_champion.py  20260516_01_dice_game.py  20260516_02_ship_results.py  20260516_03_roast_runs.py  20260516_04_quote_week_rounds.py  20260516_05_ship_cache_clear.py  20260516_05_truncate_ship_results.py  20260518_01_new_games.py  20260527_01_spy_sources.py
personas/: boss.md  chatmate.md  gopnik.md  jarvis.md  standup.md  zoomer.md
scripts/: entrypoint-dev.sh  entrypoint.sh  migrate.sh  migrate_to_calver.py  spy_probe.py
tests/: __init__.py  conftest.py  db.py  fakes.py  test_docs_and_ci.py  test_testkit.py  test_tooling_files.py
tests/bot/: test_reply_to_photo.py  test_router_admin_force_summary.py  test_router_games.py  test_router_roast.py  test_router_ship.py  test_router_spy.py  test_send_reply_maybe_voice.py  test_typing_indicator.py  test_voice_handler.py
tests/models/: test_dice_round.py  test_guess_round.py  test_message_model.py  test_monthly_champion.py  test_quote_week_round.py  test_roast.py  test_ship.py  test_spy.py
tests/scripts/: conftest.py  test_migrate_to_calver.py
tests/services/: test_app_config.py  test_chat_memory.py  test_context.py  test_dice_game.py  test_guess_game.py  test_interjector.py  test_message_history_photo.py  test_message_history_voice.py  test_monthly_champion.py  test_monthly_champion_integration.py  test_persona.py  test_quick_games.py  test_quotebook.py  test_quotebook_integration.py  test_release_broadcast.py  test_reply_images.py  test_reply_voice.py  test_roast.py  test_roulette.py  test_roulette_adjustments.py  test_roulette_aggregate_end.py  test_settings.py  test_ship.py  test_spontaneity.py  test_usage_limits.py  test_user_memory_champion_block.py  test_user_memory_relationship.py
(+51 files in other folders)
