[project]
name = "gremlin-bot"
version = "0.1.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "app/admin",
  "app/bot",
  "app/main.py",
  "app/services/interjector.py",
  "app/services/reactions.py",
  "app/services/user_memory.py",
  "app/services/network_monitor.py",
  "app/services/moderation.py",
  "app/services/message_history.py",
  "app/services/llm",
  "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501"]

[tool.mypy]
python_version = "3.11"
files = ["app", "tests"]
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
exclude = '''(?x)(
    ^app/admin/|
    ^app/bot/|
    ^app/main\.py$|
    ^app/services/interjector\.py$|
    ^app/services/reactions\.py$|
    ^app/services/user_memory\.py$|
    ^app/services/network_monitor\.py$|
    ^app/services/moderation\.py$|
    ^app/services/message_history\.py$|
    ^app/services/llm/|
    ^app/utils/logging\.py$|
    ^migrations/
)'''

[[tool.mypy.overrides]]
module = ["aiogram.*", "apscheduler.*", "redis.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.services.user_memory", "app.services.llm.client", "app.utils.logging"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
