[project]
name = "gremlin-bot"
version = "0.3.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "app/admin",
  "app/bot",
  "app/main.py",
  "app/services/interjector.py",
  "app/services/reactions.py",
  "app/services/user_memory.py",
  "app/services/network_monitor.py",
  "app/services/moderation.py",
  "app/services/message_history.py",
  "app/services/llm",
  "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501"]

[tool.mypy]
python_version = "3.11"
files = ["app", "tests"]
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
exclude = '''(?x)(
    ^app/admin/|
    ^app/bot/|
    ^app/main\.py$|
    ^app/services/interjector\.py$|
    ^app/services/reactions\.py$|
    ^app/services/user_memory\.py$|
    ^app/services/network_monitor\.py$|
    ^app/services/moderation\.py$|
    ^app/services/message_history\.py$|
    ^app/services/llm/|
    ^app/utils/logging\.py$|
    ^migrations/
)'''

[[tool.mypy.overrides]]
module = ["aiogram.*", "apscheduler.*", "redis.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.services.user_memory", "app.services.llm.client", "app.utils.logging"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# app/bot/* is excluded by default, but test imports can pull these modules
# back into type-checking. Silence follow_imports so transitive checks on
# already-excluded code don't fail the suite.
module = [
    "app.bot.*",
    "app.admin.*",
    "app.main",
    "app.services.interjector",
    "app.services.reactions",
    "app.services.user_memory",
    "app.services.network_monitor",
    "app.services.moderation",
    "app.services.message_history",
    "app.services.llm.client",
]
follow_imports = "silent"
ignore_errors = true
